--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,12 @@ export(detect_unclosed_chars)
 export(erase_quoted_text)
 export(extract_txt_before_regex)
 export(extract_txt_from_df_vars)
+export(fix_escaping)
 export(readlines_in_df)
 export(srch_pattern_in_files_get_df)
+export(str_extract_all_to_tidy_df)
 importFrom(stringr,regex)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_remove_all)
-importFrom(tidyr,unnest)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
