--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ export(erase_quoted_text)
 export(extract_txt_before_regex)
 export(extract_txt_from_df_vars)
 export(fix_escaping)
+export(get_igraph_from_df)
 export(get_text_network_from_files)
 export(readlines_in_df)
 export(srch_pattern_in_files_get_df)
 export(str_extract_all_to_tidy_df)
+import(igraph)
 importFrom(stringr,regex)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_remove_all)
