--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(erase_quoted_text)
 export(extract_txt_before_regex)
 export(extract_txt_from_df_vars)
 export(fix_escaping)
+export(get_github_filespath)
 export(get_igraph_from_df)
 export(get_text_network_from_files)
 export(readlines_in_df)
