--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,25 @@ export(erase_quoted_text)
 export(extract_txt_before_regex)
 export(extract_txt_from_df_vars)
 export(fix_escaping)
-export(get_github_filespath)
+export(get_github_raw_filespath)
 export(get_igraph_from_df)
+export(get_networkd3_from_igraph)
 export(get_text_network_from_files)
 export(readlines_in_df)
 export(srch_pattern_in_files_get_df)
 export(str_extract_all_to_tidy_df)
 import(igraph)
+importFrom(htmltools,HTML)
+importFrom(htmltools,tags)
+importFrom(htmlwidgets,appendContent)
+importFrom(htmlwidgets,prependContent)
+importFrom(igraph,V)
+importFrom(igraph,degree)
+importFrom(igraph,simplify)
+importFrom(networkD3,JS)
+importFrom(networkD3,forceNetwork)
+importFrom(networkD3,igraph_to_networkD3)
+importFrom(stats,quantile)
 importFrom(stringr,regex)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_remove_all)
