--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,7 @@ importFrom(igraph,simplify)
 importFrom(networkD3,JS)
 importFrom(networkD3,forceNetwork)
 importFrom(networkD3,igraph_to_networkD3)
-importFrom(stats,quantile)
+importFrom(scales,col_numeric)
 importFrom(stringr,regex)
 importFrom(stringr,str_extract_all)
 importFrom(utils,setTxtProgressBar)
