--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: codexplor
-Title: Explore And Dataviz' Your R Code Files
+Title: Explore And Dataviz' a Programming Project
 Version: 0.0.0.9000
 Authors@R: 
     person("Clément", "Laverdet", , "clementlvd@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4466-3394"))
-Description: Explore your codes files, get a network of the func' relationship. Nice for identifying higher-level func', dependancies [...] and showing your work to other people, coordinate large programming project, made automatic-help func', etc.
+Description: Get text-mining and network metrics about a programming project (e.g., network of the internal functions relationship). Nice for identifying higher-level func', dependancies [...] and showing your work to other people, coordinate large programming project, made automatic-help func', etc.
 License: Apache License (>= 2) | file LICENSE
 Suggests: 
     knitr,
