1st implement block of commented lines

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get_networkd3_from_igraph)
 export(get_regex_from_vector)
 export(move_networkd3_legend)
 export(readlines_in_df)
+export(separate_commented_lines)
 export(srch_pattern_in_df)
 export(str_extract_all_to_tidy_df)
 importFrom(htmltools,HTML)
