add counting of position

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(compute_doc_network_from_corpus)
 export(construct_corpus)
 export(filter_igraph_egonetwork)
 export(fix_escaping)
-export(gather_df_lines)
 export(get_citations_network_from_df)
 export(get_def_regex_by_language)
 export(get_doc_network_from_project)
@@ -33,5 +32,6 @@ importFrom(networkD3,JS)
 importFrom(networkD3,forceNetwork)
 importFrom(networkD3,igraph_to_networkD3)
 importFrom(scales,col_numeric)
+importFrom(stats,ave)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
