--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("Clément", "Laverdet", , "clementlvd@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4466-3394"))
 Description: Get text-mining and network metrics about a programming project (e.g., network of the internal functions relationship). Nice for identifying higher-level func', dependancies [...] and showing your work to other people, coordinate large programming project, made automatic-help func', etc.
-License: Apache License (>= 2) | file LICENSE
+License: Apache License (>= 2)
 Suggests: 
     knitr,
     rmarkdown,
