--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: codexplor
-Title: Explore And Dataviz' a Programming Project
-Version: 0.0.0.91
+Title: Explore And Analyze a Programming Project
+Version: 0.0.0.92
 Authors@R: 
     person("Clément", "Laverdet", , "clementlvd@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4466-3394"))
-Description: Get text-mining and network metrics about a programming project (e.g., network of the internal functions relationship). Nice for identifying higher-level func', dependancies [...] and showing your work to other people, coordinate large programming project, made automatic-help func', etc.
+Description: Get text-mining and network metrics on a programming project, in order to manage it more efficiently (e.g., network of the internal functions relationship). Nice for identifying higher-level func', internal dependancies, coordinate large programming project, made automatic-help func' [...] and showing your work to other people, etc.
 License: Apache License (>= 2)
 Suggests: 
     knitr,
@@ -25,3 +25,4 @@ Imports:
     htmlwidgets,
     htmltools
 URL: https://clement-lvd.github.io/codexplor/
+BugReports: https://clement-lvd.github.io/codexplor/issues
