implement proper quoted text mecanizm & cleaning path method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,12 @@
 S3method(print,corpus.lines)
 S3method(print,corpus.nodelist)
 export(add_doc_network_to_corpus)
+export(censor_quoted_text)
+export(compute_nchar_metrics)
 export(construct_corpus)
 export(filter_igraph_egonetwork)
 export(fix_escaping)
+export(gather_df_lines)
 export(get_citations_network_from_df)
 export(get_def_regex_by_language)
 export(get_doc_network_from_project)
