implement robus network construction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ S3method(print,corpus.lines)
 export(add_doc_network_to_corpus)
 export(censor_quoted_text)
 export(construct_corpus)
+export(explor_project)
 export(filter_igraph_egonetwork)
 export(get_def_regex_by_language)
-export(get_doc_network_from_project)
 export(get_igraph_from_df)
 export(get_networkd3_from_igraph)
 export(move_networkd3_legend)
