implement 1st C-level func (levenstein distance)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,3 +27,4 @@ importFrom(scales,col_numeric)
 importFrom(stats,ave)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
+useDynLib(codexplor, .registration = TRUE)
